system/monitoring/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    hajimari.io/appName: Grafana
    hajimari.io/icon: chart-bar
spec:
  entryPoints:
    - websecure
  tls:
    secretName: grafana-tls-certificate
  routes:
    - match: Host(`grafana.hyperion.law`)
      kind: Rule
      services:
        - name: monitoring-grafana
          port: http-web
          kind: Service
